# Quant-Trading-System

./: .gitignore  LICENSE  PUSH_TO_GITHUB.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
old system/: main.py.py  pnl_dashboard.py  signals.py  trade_tracker.py
scripts/: experiment.py  make_results_chart.py  robustness.py
src/quant/: __init__.py  backtest.py  cli.py  config.py  dashboard.py  data.py  indicators.py  ml.py  risk.py  strategy.py
tests/: conftest.py  test_backtest.py  test_indicators.py  test_risk.py
