[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "2.0.0"
description = "Configurable, rigorously backtested mean-reversion + ML ranking trading engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "neeti" }]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
    "plotly>=5.18",
    "plyer>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "matplotlib>=3.7"]

[project.scripts]
quant = "quant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
